# oldcode

./: README.md
business/activity/customer/: .postcssrc.js  README.md  package.json
business/activity/maintenance/: .babelrc  .gitignore  package.json
business/activity/mobile/: .gitignore  package.json  vue.config.js
business/activity/operation/: .eslintignore  .gitignore  package.json
business/mall/: .babelrc  .babelrc.js  .gitignore  deploy.py  package.json
business/mall/mallBuild/: build.js  webpack.dev.conf.js
business/platform/auth/: .babelrc  .gitignore  README.md  package.json
business/platform/dmt/: README.md
business/platform/pay/: .babelrc.js  .gitignore  (+3 more)
mgmt/: 交接文档.md
mgmt/代码结构/: B+代码结构.drawio  B+前端代码结构.xmind  paperprint代码结构.drawio  paperprint前端代码结构.xmind
mgmt/其他文档/: 商城入驻店铺操作指南v1.0.docx
mgmt/对接配置/: 商云H5对接行方小程序技术方案V1.0.docx  商城对接银行配置.docx  商旅对接银行配置.docx
mgmt/版本发布/: B+前端版本发布手册.docx  B+项目版本发布规范.docx
paper/paperprint-electron/: .gitignore  README.md  config.properties  native.node  package.json  纸纹接口文档.yaml
paper/paperprint-python/: DertImage.py  ImageCompare.py  PCDemo.py  PaperPrintCompare.py  PreprocessImageTool.py  PylabShowTool.py  QRCodePaperImage.py  QRCodeParser.py  README.md  TestReport.py  compare.spec  dng2tiffFile.py  gui.py  params.py  pcUVC.MD  testCase.py  util.py  打包脚本.bat
paper/paperprint_cplus/: README.md
paper/paperprint_cplus/test/: CMakeLists.txt  build_vs120.cmd
paper/paperprint_cplus/test/windows/TestPaperprint/: TestPaperprint.cpp  TestPaperprint.sln  TestPaperprint.vcxproj  TestPaperprint.vcxproj.filters
(+4488 files in other folders)
